--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@react-navigation/native-stack": "^6.9.10",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.1.4",
+    "react-native-paper-tabs": "^0.7.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "styled-components": "^5.3.6"
   },
