--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-pager-view": "^6.1.4",
+    "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.4",
     "react-native-paper-tabs": "^0.7.0",
     "react-native-safe-area-context": "4.4.1",
