--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.17.2",
+    "@expo/webpack-config": "^18.0.1",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
-    "expo": "~47.0.12",
+    "expo": "^48.0.4",
     "expo-status-bar": "~1.4.2",
     "moment": "^2.29.4",
     "react": "18.1.0",
