--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-grid-system": "^8.1.9",
     "react-native": "0.70.5",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.1.4",
